// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OE - navigation renders correctly 1`] = `
<jest>
  <nav
    class="nav nav-pills"
  >
    <a
      class="nav-link"
      href="/example.html"
    >
      I'm a link 1
    </a>
    <a
      class="nav-link"
      href="/example.html"
    >
      I'm a link 2
    </a>
    <a
      class="nav-link"
      href="/example.html"
    >
      I'm a link 3
    </a>
    <a
      class="nav-link active"
      href="/example.html"
    >
      I'm a link active
    </a>
    <a
      aria-disabled="true"
      class="nav-link disabled"
      href="/example.html"
      tabindex="-1"
    >
      I'm a link disabled
    </a>
  </nav>
</jest>
`;

exports[`OE - navigation renders correctly as list 1`] = `
<jest>
  <ul
    class="nav nav-pills"
  >
    <li
      class="nav-item"
    >
      <a
        class="nav-link"
        href="/example.html"
      >
        I'm a link 1
      </a>
    </li>
    <li
      class="nav-item"
    >
      <a
        class="nav-link"
        href="/example.html"
      >
        I'm a link 2
      </a>
    </li>
    <li
      class="nav-item"
    >
      <a
        class="nav-link"
        href="/example.html"
      >
        I'm a link 3
      </a>
    </li>
    <li
      class="nav-item"
    >
      <a
        class="nav-link active"
        href="/example.html"
      >
        I'm a link active
      </a>
    </li>
    <li
      class="nav-item"
    >
      <a
        aria-disabled="true"
        class="nav-link disabled"
        href="/example.html"
        tabindex="-1"
      >
        I'm a link disabled
      </a>
    </li>
  </ul>
</jest>
`;

exports[`OE - navigation renders correctly full width 1`] = `
<jest>
  <nav
    class="nav nav-pills nav-fill"
  >
    <a
      class="nav-link"
      href="/example.html"
    >
      I'm a link 1
    </a>
    <a
      class="nav-link"
      href="/example.html"
    >
      I'm a link 2
    </a>
    <a
      class="nav-link"
      href="/example.html"
    >
      I'm a link 3
    </a>
    <a
      class="nav-link active"
      href="/example.html"
    >
      I'm a link active
    </a>
    <a
      aria-disabled="true"
      class="nav-link disabled"
      href="/example.html"
      tabindex="-1"
    >
      I'm a link disabled
    </a>
  </nav>
</jest>
`;

exports[`OE - navigation renders correctly on vertical 1`] = `
<jest>
  <nav
    class="nav nav-pills flex-column"
  >
    <a
      class="nav-link"
      href="/example.html"
    >
      I'm a link 1
    </a>
    <a
      class="nav-link"
      href="/example.html"
    >
      I'm a link 2
    </a>
    <a
      class="nav-link"
      href="/example.html"
    >
      I'm a link 3
    </a>
    <a
      class="nav-link active"
      href="/example.html"
    >
      I'm a link active
    </a>
    <a
      aria-disabled="true"
      class="nav-link disabled"
      href="/example.html"
      tabindex="-1"
    >
      I'm a link disabled
    </a>
  </nav>
</jest>
`;

exports[`OE - navigation renders correctly with custom styles 1`] = `
<jest>
  <nav
    class="nav nav-tabs"
  >
    <a
      class="nav-link"
      href="/example.html"
    >
      I'm a link 1
    </a>
    <a
      class="nav-link"
      href="/example.html"
    >
      I'm a link 2
    </a>
    <a
      class="nav-link"
      href="/example.html"
    >
      I'm a link 3
    </a>
    <a
      class="nav-link active"
      href="/example.html"
    >
      I'm a link active
    </a>
    <a
      aria-disabled="true"
      class="nav-link disabled"
      href="/example.html"
      tabindex="-1"
    >
      I'm a link disabled
    </a>
    <a
      aria-expanded="false"
      class="nav-link dropdown-toggle"
      data-bs-toggle="dropdown"
      href="#"
      id="dropdown-1"
      role="button"
    >
      Dropdown Toggle
    </a>
    <ul
      aria-labelledby="dropdown-1"
      class="dropdown-menu"
    >
      <li>
        <a
          class="dropdown-item"
          href="/example.html"
        >
          I'm a link
        </a>
      </li>
      <li>
        <button
          class="dropdown-item"
          type="button"
        >
          I'm a button
        </button>
      </li>
      <li>
        <hr
          class="dropdown-divider"
        />
      </li>
      <li>
        <button
          aria-disabled="true"
          class="dropdown-item"
          disabled="true"
          type="button"
        >
          I'm a disabled button
        </button>
      </li>
      <li>
        <button
          class="dropdown-item active"
          type="button"
        >
          I'm a active button
        </button>
      </li>
    </ul>
  </nav>
</jest>
`;

exports[`OE - navigation renders correctly with elements aligned right 1`] = `
<jest>
  <nav
    class="nav nav-pills justify-content-justify-content-end"
  >
    <a
      class="nav-link"
      href="/example.html"
    >
      I'm a link 1
    </a>
    <a
      class="nav-link"
      href="/example.html"
    >
      I'm a link 2
    </a>
    <a
      class="nav-link"
      href="/example.html"
    >
      I'm a link 3
    </a>
    <a
      class="nav-link active"
      href="/example.html"
    >
      I'm a link active
    </a>
    <a
      aria-disabled="true"
      class="nav-link disabled"
      href="/example.html"
      tabindex="-1"
    >
      I'm a link disabled
    </a>
  </nav>
</jest>
`;

exports[`OE - navigation renders correctly with pills style on elements 1`] = `
<jest>
  <nav
    class="nav nav-pills"
  >
    <a
      class="nav-link"
      href="/example.html"
    >
      I'm a link 1
    </a>
    <a
      class="nav-link"
      href="/example.html"
    >
      I'm a link 2
    </a>
    <a
      class="nav-link"
      href="/example.html"
    >
      I'm a link 3
    </a>
    <a
      class="nav-link active"
      href="/example.html"
    >
      I'm a link active
    </a>
    <a
      aria-disabled="true"
      class="nav-link disabled"
      href="/example.html"
      tabindex="-1"
    >
      I'm a link disabled
    </a>
  </nav>
</jest>
`;

exports[`OE - navigation renders correctly with tabs 1`] = `
<jest>
  <ul
    class="nav nav-tabs"
    role="tablist"
  >
    <li
      class="nav-item"
      role="presentation"
    >
      <a
        aria-controls="first"
        class="nav-link"
        data-bs-toggle="tab"
        href="#first"
        id="first-tab"
        role="button"
      >
        I'm a link
      </a>
    </li>
    <li
      class="nav-item"
      role="presentation"
    >
      <button
        aria-controls="second"
        autocomplete="off"
        class="nav-link"
        data-bs-target="#second"
        data-bs-toggle="tab"
        id="second-tab"
        type="button"
      >
        I'm a button
      </button>
    </li>
    <li
      class="nav-item"
      role="presentation"
    >
      <button
        aria-controls="third"
        aria-disabled="true"
        autocomplete="off"
        class="nav-link"
        data-bs-target="#third"
        data-bs-toggle="tab"
        disabled="true"
        id="third-tab"
        type="button"
      >
        I'm a disabled button
      </button>
    </li>
    <li
      class="nav-item dropdown"
      role="presentation"
    >
      <a
        aria-expanded="false"
        class="nav-link dropdown-toggle"
        data-bs-toggle="dropdown"
        href="#"
        id="dropdown-1"
        role="button"
      >
        Dropdown Toggle
      </a>
      <ul
        aria-labelledby="dropdown-1"
        class="dropdown-menu"
      >
        <li>
          <a
            class="dropdown-item"
            href="/example.html"
          >
            I'm a link
          </a>
        </li>
        <li>
          <button
            class="dropdown-item"
            type="button"
          >
            I'm a button
          </button>
        </li>
        <li>
          <hr
            class="dropdown-divider"
          />
        </li>
        <li>
          <button
            aria-disabled="true"
            class="dropdown-item"
            disabled="true"
            type="button"
          >
            I'm a disabled button
          </button>
        </li>
        <li>
          <button
            class="dropdown-item active"
            type="button"
          >
            I'm a active button
          </button>
        </li>
      </ul>
    </li>
    <li
      class="nav-item"
      role="presentation"
    >
      <button
        aria-controls="fourth"
        autocomplete="off"
        class="nav-link active"
        data-bs-target="#fourth"
        data-bs-toggle="tab"
        id="fourth-tab"
        type="button"
      >
        I'm a active button
      </button>
    </li>
  </ul>
  <div
    class="tab-content"
  >
    <div
      aria-labelledby="first-tab"
      class="tab-pane fade"
      id="first"
      role="tabpanel"
    >
      This is a demo content for the First Tab. Lorem ipsum dolor sit amet, consectetur adipiscing elit.
    </div>
    <div
      aria-labelledby="second-tab"
      class="tab-pane fade"
      id="second"
      role="tabpanel"
    >
      This is a demo content for the Second Tab. Lorem ipsum dolor sit amet, consectetur adipiscing elit.
    </div>
    <div
      aria-labelledby="third-tab"
      class="tab-pane fade"
      id="third"
      role="tabpanel"
    >
      This is a demo content for the Third Tab. Lorem ipsum dolor sit amet, consectetur adipiscing elit.
    </div>
    <div
      aria-labelledby="fourth-tab"
      class="tab-pane fade show active"
      id="fourth"
      role="tabpanel"
    >
      This is a demo content for the Fourth Tab. Lorem ipsum dolor sit amet, consectetur adipiscing elit.
    </div>
  </div>
</jest>
`;
